--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,6 +1,6 @@
 {
   "id": "com.gruijter.powerhour",
-  "version": "4.3.5",
+  "version": "4.3.6",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -38,7 +38,8 @@
       "pricing",
       "utility bill",
       "stromregning",
-      "rekening"
+      "rekening",
+      "tibber"
     ]
   },
   "permissions": [
