--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "4.3.6",
+  "version": "4.3.7",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -1552,13 +1552,13 @@
               "id": "tariff_via_flow",
               "type": "checkbox",
               "label": {
-                "en": "Tariff via flow",
-                "nl": "Tarief via flow"
+                "en": "Tariff via flow or DAP",
+                "nl": "Tarief via flow of DAP"
               },
               "value": true,
               "hint": {
-                "en": "Include this device when setting a new tariff via flow.",
-                "nl": "Dit apparaat meenemen bij het instellen van een nieuw tarief via flow."
+                "en": "Include this device when setting a new tariff via flow or DAP.",
+                "nl": "Dit apparaat meenemen bij het instellen van een nieuw tarief via flow of DAP."
               }
             },
             {
@@ -1934,13 +1934,13 @@
               "id": "tariff_via_flow",
               "type": "checkbox",
               "label": {
-                "en": "Tariff via flow",
-                "nl": "Tarief via flow"
+                "en": "Tariff via flow or DAP",
+                "nl": "Tarief via flow of DAP"
               },
               "value": true,
               "hint": {
-                "en": "Include this device when setting a new tariff via flow.",
-                "nl": "Dit apparaat meenemen bij het instellen van een nieuw tarief via flow."
+                "en": "Include this device when setting a new tariff via flow or DAP.",
+                "nl": "Dit apparaat meenemen bij het instellen van een nieuw tarief via flow of DAP."
               }
             },
             {
