--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "4.3.7",
+  "version": "4.4.0",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -1177,41 +1177,6 @@
         {
           "type": "group",
           "label": {
-            "en": "Price settings",
-            "nl": "Prijs instellingen"
-          },
-          "children": [
-            {
-              "id": "variableMarkup",
-              "type": "number",
-              "label": {
-                "en": "Variable markup (%)",
-                "nl": "Variabele opslag (%)"
-              },
-              "value": 0,
-              "hint": {
-                "en": "Enter the percentage with which the net price must be increased. E.g. for VAT.",
-                "nl": "Voer het percentage in waarmee de netto prijs verhoogd moet worden. Bijvoorbeeld voor BTW."
-              }
-            },
-            {
-              "id": "fixedMarkup",
-              "type": "number",
-              "label": {
-                "en": "Fixed markup per kWh/m3 (€)",
-                "nl": "Vaste opslag per kWh/m3 (€)"
-              },
-              "value": 0,
-              "hint": {
-                "en": "Enter the fixed amount in EURO(!) with which the price must be increased per kWh or m3, incl. VAT. E.g. for purchase fee.",
-                "nl": "Voer het vaste bedrag in EURO(!) in waarmee de prijs per kWh of m3 verhoogd moet worden incl. BTW. Bijvoorbeeld voor inkoopvergoeding, Energie belasting, ODE."
-              }
-            }
-          ]
-        },
-        {
-          "type": "group",
-          "label": {
             "en": "Currency settings",
             "nl": "Munteenheid instellingen"
           },
@@ -1220,8 +1185,8 @@
               "id": "currency",
               "type": "text",
               "label": {
-                "en": "Currency unit",
-                "nl": "Geldeenheid"
+                "en": "Currency unit display",
+                "nl": "Weergave geldeenheid"
               },
               "value": "€",
               "hint": {
@@ -1248,13 +1213,166 @@
               "id": "exchangeRate",
               "type": "number",
               "label": {
-                "en": "€ Exchange rate",
-                "nl": "€ Wisselkoers"
+                "en": "Exchange rate with €",
+                "nl": "Wisselkoers met €"
               },
               "value": 1,
               "hint": {
-                "en": "If you do not want to use EURO, enter the exchange rate to your preferred currency.",
-                "nl": "Als je geen EURO's wilt gebruiken kun je hier de wisselkoers ingeven naar de gewenste munteenheid."
+                "en": "Set at 1 if you want to use EURO, otherwise enter the exchange rate to your preferred currency.",
+                "nl": "Stel in op 1 als je EURO's wilt gebruiken, of geef de wisselkoers in naar de gewenste munteenheid."
+              }
+            },
+            {
+              "id": "fetchExchangeRate",
+              "type": "dropdown",
+              "value": "NONE",
+              "label": {
+                "en": "Daily update the exchange rate",
+                "nl": "Update wisselkoers dagelijks"
+              },
+              "values": [
+                {
+                  "id": "NONE",
+                  "label": {
+                    "en": "DO NOT FETCH",
+                    "nl": "NIET OPHALEN"
+                  }
+                },
+                {
+                  "id": "BGN",
+                  "label": {
+                    "en": "BGN"
+                  }
+                },
+                {
+                  "id": "CHF",
+                  "label": {
+                    "en": "CHF"
+                  }
+                },
+                {
+                  "id": "CZK",
+                  "label": {
+                    "en": "CZK"
+                  }
+                },
+                {
+                  "id": "DKK",
+                  "label": {
+                    "en": "DKK"
+                  }
+                },
+                {
+                  "id": "GBP",
+                  "label": {
+                    "en": "GBP"
+                  }
+                },
+                {
+                  "id": "HRK",
+                  "label": {
+                    "en": "HRK"
+                  }
+                },
+                {
+                  "id": "HUF",
+                  "label": {
+                    "en": "HUF"
+                  }
+                },
+                {
+                  "id": "ISK",
+                  "label": {
+                    "en": "ISK"
+                  }
+                },
+                {
+                  "id": "NOK",
+                  "label": {
+                    "en": "NOK"
+                  }
+                },
+                {
+                  "id": "PLN",
+                  "label": {
+                    "en": "PLN"
+                  }
+                },
+                {
+                  "id": "RON",
+                  "label": {
+                    "en": "RON"
+                  }
+                },
+                {
+                  "id": "RUB",
+                  "label": {
+                    "en": "RUB"
+                  }
+                },
+                {
+                  "id": "SEK",
+                  "label": {
+                    "en": "SEK"
+                  }
+                },
+                {
+                  "id": "TRY",
+                  "label": {
+                    "en": "TRY"
+                  }
+                },
+                {
+                  "id": "AUD",
+                  "label": {
+                    "en": "AUD"
+                  }
+                },
+                {
+                  "id": "USD",
+                  "label": {
+                    "en": "USD"
+                  }
+                }
+              ],
+              "hint": {
+                "en": "Enter the currency for which you want the exchange rate to be fetched automatically. Leave at 'DO NOT FETCH' if you are using Euro, or if you want to manually set the exchange rate.",
+                "nl": "Geef de munteenheid aan waarvan de wisselkoers automatisch moey worden opgehaald. Zet op 'NIET OPHALEN' als je Euro gebruit, of als je de wisselkoers handmatig wilt invoeren."
+              }
+            }
+          ]
+        },
+        {
+          "type": "group",
+          "label": {
+            "en": "Price settings",
+            "nl": "Prijs instellingen"
+          },
+          "children": [
+            {
+              "id": "variableMarkup",
+              "type": "number",
+              "label": {
+                "en": "Variable markup (%)",
+                "nl": "Variabele opslag (%)"
+              },
+              "value": 0,
+              "hint": {
+                "en": "Enter the percentage with which the net price must be increased. E.g. for VAT.",
+                "nl": "Voer het percentage in waarmee de netto prijs verhoogd moet worden. Bijvoorbeeld voor BTW."
+              }
+            },
+            {
+              "id": "fixedMarkup",
+              "type": "number",
+              "label": {
+                "en": "Fixed markup per kWh or m3",
+                "nl": "Vaste opslag per kWh of m3"
+              },
+              "value": 0,
+              "hint": {
+                "en": "Enter the fixed amount with which the price must be increased per kWh or m3, incl. VAT. E.g. for purchase fee.",
+                "nl": "Voer het vaste bedrag in waarmee de prijs per kWh of m3 verhoogd moet worden incl. BTW. Bijvoorbeeld voor inkoopvergoeding, Energie belasting, ODE."
               }
             }
           ]
@@ -1275,8 +1393,8 @@
               },
               "value": false,
               "hint": {
-                "en": "Every hour the price per kWh will be set as tariff for PBTH devices, without the need to create a flow.",
-                "nl": "Ieder uur wordt de prijs per kWh ingesteld als tarief voor PBTH devices, zonder dat een flow gemaakt hoeft te worden."
+                "en": "Every hour the price per kWh or m3 will be sent as tariff for PBTH devices, without the need to create a flow.",
+                "nl": "Ieder uur wordt de prijs per kWh of m3 als tarief naar PBTH devices gestuurd, zonder dat een flow gemaakt hoeft te worden."
               }
             }
           ]
