--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -10,7 +10,8 @@
   "description": {
     "en": "Summarize the energy/water usage or (solar) production per hour, day, month and year. Use dynamic tariffs.",
     "no": "Summarize the energy/water usage or (solar) production per hour, day, month and year. Use dynamic tariffs.",
-    "nl": "Samenvatten van energie/water verbruik of (zonnepaneel) productie per uur, dag, maand en jaar. Gebruik dynamische tarieven."
+    "nl": "Samenvatten van energie/water verbruik of (zonnepaneel) productie per uur, dag, maand en jaar. Gebruik dynamische tarieven.",
+    "sv": "Sammanfatta energi/vattenanvändning eller (sol)produktion per timme, dag, månad och år. Använd dynamiska tariffer."
   },
   "category": "energy",
   "tags": {
@@ -69,6 +70,9 @@
       },
       {
         "name": "🇳🇱 Robin"
+      },
+      {
+        "name": "sv Ted Dÿring"
       }
     ]
   },
