--- a/.homeycompose/capabilities/measure_watt_max.json
+++ b/.homeycompose/capabilities/measure_watt_max.json
@@ -3,6 +3,7 @@
   "title": {
     "en": "Maximum",
     "de": "Maximum",
+    "it": "Massimo",
     "nl": "Maximum"
   },
   "uiComponent": "sensor",
