--- a/.homeycompose/capabilities/measure_watt_min.json
+++ b/.homeycompose/capabilities/measure_watt_min.json
@@ -3,6 +3,7 @@
   "title": {
     "en": "Minimum",
     "de": "Minimum",
+    "it": "Minimo",
     "nl": "Minimum"
   },
   "uiComponent": "sensor",
