--- a/.homeycompose/capabilities/measure_lpm_min.json
+++ b/.homeycompose/capabilities/measure_lpm_min.json
@@ -3,6 +3,7 @@
   "title": {
     "en": "Minimum",
     "de": "Minimum",
+    "it": "Minimo",
     "nl": "Minimum"
   },
   "uiComponent": "sensor",
@@ -13,6 +14,7 @@
   "units": {
     "en": "L/minute",
     "de": "L/Minute",
+    "it": "L/minuto",
     "nl": "L/minuut"
   },
   "decimals": 2
