German translation (Part 2)

--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -77,10 +77,10 @@
         "name": "🇳🇱 Robin de Gruijter"
       },
       {
-        "name": "sv Ted Dÿring"
+        "name": "🇸🇪 Ted Dÿring"
       },
       {
-        "name": "IT Alessandro"
+        "name": "🇮🇹 Alessandro"
       },
       {
         "name": "🇳🇱 Robin"
