--- a/.homeycompose/capabilities/measure_watt_max.json
+++ b/.homeycompose/capabilities/measure_watt_max.json
@@ -2,6 +2,7 @@
   "type": "number",
   "title": {
     "en": "Maximum",
+    "no": "Maximum",
     "nl": "Maximum"
   },
   "uiComponent": "sensor",
