--- a/.homeycompose/capabilities/measure_watt_min.json
+++ b/.homeycompose/capabilities/measure_watt_min.json
@@ -2,6 +2,7 @@
   "type": "number",
   "title": {
     "en": "Minimum",
+    "no": "Minimum",
     "nl": "Minimum"
   },
   "uiComponent": "sensor",
