--- a/.homeycompose/capabilities/measure_watt_max.json
+++ b/.homeycompose/capabilities/measure_watt_max.json
@@ -5,6 +5,7 @@
     "de": "Maximum",
     "sv": "Maximum",
     "it": "Massimo",
+    "fr": "Maximum",
     "nl": "Maximum"
   },
   "uiComponent": "sensor",
