--- a/.homeycompose/capabilities/measure_watt_min.json
+++ b/.homeycompose/capabilities/measure_watt_min.json
@@ -5,6 +5,7 @@
     "de": "Minimum",
     "sv": "Minimum",
     "it": "Minimo",
+    "fr": "Maximum",
     "nl": "Minimum"
   },
   "uiComponent": "sensor",
