--- a/.homeycompose/capabilities/measure_lpm_max.json
+++ b/.homeycompose/capabilities/measure_lpm_max.json
@@ -5,6 +5,7 @@
     "de": "Maximum",
     "sv": "Maximum",
     "it": "Massimo",
+    "fr": "Maximum",
     "nl": "Maximum"
   },
   "uiComponent": "sensor",
@@ -17,6 +18,7 @@
     "de": "L/Minute",
     "sv": "L/minute",
     "it": "L/minuto",
+    "fr": "L/Minute",
     "nl": "L/minuut"
   },
   "decimals": 2
