--- a/.homeycompose/capabilities/measure_lpm_min.json
+++ b/.homeycompose/capabilities/measure_lpm_min.json
@@ -5,6 +5,7 @@
     "de": "Minimum",
     "sv": "Minimum",
     "it": "Minimo",
+    "fr": "Minimum",
     "nl": "Minimum"
   },
   "uiComponent": "sensor",
@@ -17,6 +18,7 @@
     "de": "L/Minute",
     "sv": "L/minute",
     "it": "L/minuto",
+    "fr": "L/Minute",
     "nl": "L/minuut"
   },
   "decimals": 2
