--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -84,6 +84,9 @@
         "name": "🇮🇹 Alessandro"
       },
       {
+        "name": "FR sebyldino"
+      },
+      {
         "name": "🇳🇱 Robin"
       }
     ]
