--- a/app.json
+++ b/app.json
@@ -479,7 +479,7 @@
                   "de": "die nächsten 2 Std.",
                   "sv": "nästa 2H",
                   "it": "prossime 2h",
-                  "fr": "2 prochaines heures"
+                  "fr": "2 prochaines heures",
                   "nl": "komende 2U"
                 }
               },
